# electronics-shop-project-2023

./: pyproject.toml
homework-1/: main.py
homework-2/: main.py
homework-5/: main.py
src/: item.py  keyboard.py  phone.py
tests/: test_item.py  test_keyboard.py  test_phone.py
