[tool.poetry]
name = "electronics-shop-project-2023"
version = "0.1.0"
description = ""
authors = ["Evgenii Ermak <djermak3000@mail.ru>"]
readme = "README.md"
packages = [{include = "electronics-shopproject-2023"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.2"
requests = "^2.31.0"
accessify = "^0.3.1"
protected = "^0.0.1"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
